versioned_docs/version-0.10/samples/golang.mdx
---
title: Getting Started on Okteto Cloud with Go
description: This tutorial will show you how to develop a Go sample application
sidebar_label: Go
id: golang
---

import Image from '@theme/Image';

[Okteto Cloud](https://cloud.okteto.com/#/?origin=docs) gives instant access to secure Kubernetes namespaces to enable developers to code, build, and run Kubernetes applications entirely in the cloud.

This tutorial will show you how to develop and debug a Go sample application running in Okteto Cloud.

## Prerequisites

- Install the Okteto CLI >= 1.9.0. Follow this [guide](/docs/0.10/cloud/okteto-cli/) if you haven't done it yet.
- Configure access to your Okteto Cloud Namespace [using the Okteto CLI](/docs/0.10/cloud/credentials/#download-your-kubernetes-credentials-using-the-okteto-cli) or [using the Okteto Cloud UI](/docs/0.10/cloud/credentials/#download-your-kubernetes-credentials-from-the-okteto-cloud-ui).

## Step 1: Deploy the Go Sample App

Get a local version of the Go Sample App by executing the following commands:

```console
$ git clone https://github.com/okteto/go-getting-started
$ cd go-getting-started
```

The `k8s.yml` file contains the [Kubernetes manifests](https://kubernetes.io/docs/concepts/workloads/controllers/deployment/) of the Go Sample App.
Deploy a dev version of the application by executing:

```console
$ kubectl apply -f k8s.yml
```

```console
deployment.apps "hello-world" created
service "hello-world" created
```

Log into [Okteto Cloud](https://cloud.okteto.com/#/?origin=docs) and click on the URL of the application:

<Image center src="/docs/samples/images/okteto-ui.png" alt="Okteto Cloud UI golang" width="850" />

Did you notice that you're accessing your application through an HTTPs endpoint? This is because Okteto Cloud will [automatically create them](/docs/0.10/cloud/ssl/) for you when you deploy your application. Cool no 😎?

## Step 2: Create your okteto manifest

To start developing on the Go Sample App you first need to create an okteto manifest.
With the Go Sample App deployed, run the following command to create your [okteto manifest](/docs/0.10/reference/manifest/):

```console
$ okteto init
```

```console
This command walks you through creating an okteto manifest.
It only covers the most common items, and tries to guess sensible defaults.
See https://okteto.com/docs/reference/manifest for the official documentation about the okteto manifest.
Use the arrow keys to navigate: ↓ ↑ → ←
Select the deployment you want to develop:
  ▸ hello-world
    Use default values
```

The `okteto init` command will scan the available deployments in your Kubernetes namespace and ask you to pick one.
Select the `hello-world` deployment. It's the one we deployed on the previous step.

```console
 ✓  hello-world
 ✓  Deployment 'hello-world' successfully analyzed
 ✓  okteto manifest (okteto.yml) created
 i  Run 'okteto up' to activate your development container
```

The `okteto init` command creates the following `okteto.yml` file:

```yaml
name: hello-world
image: okteto/golang:1
command: bash
securityContext:
  capabilities:
    add:
    - SYS_PTRACE
volumes:
  - /go/pkg/
  - /root/.cache/go-build/
sync:
  - .:/usr/src/app
forward:
  - 8080:8080
  - 2345:2345
```

This file defines how to activate a development container for the Go Sample App:

- `name`: the name of the Kubernetes deployment you want to put on development mode.
- `image`: the image used by the development container. More information on development images [here](/docs/0.10/reference/development-environment/).
- `command`: the start command of the development container.
- `securityContext`: `SYS_PTRACE` is a capability required by the Go debugger.
- `volumes`: a list of paths in your development container to be mounted as persistent volumes. For example, this is useful to persist the Go cache.
- `sync`: the folders that will be synchronized between your local machine and the development container.
- `forward`: a list of ports to forward from your development container.

Also, the `okteto init` command creates a `.stignore` file to indicate which files shouldn't be synchronized to your development container.
This is useful to avoid synchronizing binaries, build artifacts, git metadata, or dependencies like the `vendor` folder.

## Step 3: Activate your development container

Next, execute the following command to activate your development container:

```console
$ okteto up
```

```console
 ✓  Persistent volume successfully attached
 ✓  Images successfully pulled
 ✓  Files synchronized
    Namespace: cindy
    Name:      hello-world
    Forward:   8080 -> 8080
               2345 -> 2345

Welcome to your development container. Happy coding!
cindy:hello-world app>
```

Working in your development container is the same as working on your local machine.
Start the application by running the following command:

```console
cindy:hello-world app> go run main.go
```

```console
Starting hello-world server...
```

Go back to the browser, and reload the page to test that your application is running.

## Step 4: Develop directly on Okteto Cloud

Open the file `main.go` in your favorite local IDE and modify the response message on line 17 to be *Hello world from Okteto!*. Save your changes.

```golang
func helloServer(w http.ResponseWriter, r *http.Request) {
	fmt.Fprint(w, "Hello world from Okteto!")
}
```

Okteto will synchronize your changes to your development container.
Cancel the execution of `go run main.go` from the development container shell by pressing `ctrl + c`.
Rerun your application:

```console
cindy:hello-world app> go run main.go
```

```console
Starting hello-world server...
```

Go back to the browser and reload the page. Your code changes were instantly applied. No commit, build, or push required 😎!

## Step 5: Debug directly on Okteto Cloud

Okteto enables you to debug your applications directly from your favorite IDE.
Let's take a look at how that works in VS Code, one of the most popular IDEs for Go development.
If you haven't done it yet, install the [Go extension](https://marketplace.visualstudio.com/items?itemName=ms-vscode.Go) available from Visual Studio marketplace.

Cancel the execution of `go run main.go` from the development container shell by pressing `ctrl + c`.
Rerun your application in debug mode:

```console
cindy:hello-world app> dlv debug --headless --listen=:2345 --log --api-version=2
```

```console
API server listening at: [::]:2345
2019-10-17T14:39:24Z info layer=debugger launching process with args: [/usr/src/app/__debug_bin]
```

In your local machine, open VS Code, and install the [Go extension](https://marketplace.visualstudio.com/items?itemName=ms-vscode.Go).

The sample application is already configured for remote debugging.
Open the _Debug_ view in VS Code and run the *Connect to okteto* debug configuration (or just press the F5 shortcut) to start the remote debugger:

```json
{
    "version": "0.2.0",
    "configurations": [
        {
            "name": "Connect to okteto",
            "type": "go",
            "request": "attach",
            "mode": "remote",
            "remotePath": "/usr/src/app",
            "port": 2345,
            "host": "127.0.0.1"
        }
    ]
}
```

> You should be replacing the value of `remotePath` with wherever your application code is.

Add a breakpoint on `main.go`, line 17. Go back to the browser, and reload the page.
The execution will halt at your breakpoint. You can then inspect the request, the available variables, etc...

<Image center src="/docs/samples/images/golang-debug.png" alt="debugging in Okteto with golang" width="850" />

Your code is executing in Okteto Cloud, but you can debug it from your local machine without any extra services or tools.
Pretty cool no? 😉

## Next steps

Congratulations, you just developed **your first application in Okteto Cloud** 🚀.

> Okteto lets you develop your applications directly on Kubernetes. This way you can:
> - Eliminate integration issues by developing in a realistic environment
> - Test your application end to end as fast as you type code
> - No more CPU cycles wasted in your machine. Develop at the speed of the cloud!

Ready to develop your application on Okteto Cloud? Read our [step by step tutorial](/docs/0.10/tutorials/getting-started-with-pipelines/) on how to configure an Okteto Pipeline to deploy realistic environments for your application in just one click.

Find more advanced samples with Okteto in [this repository](https://github.com/okteto/samples) or join our [#okteto](https://kubernetes.slack.com/messages/CM1QMQGS0/) channel in the [Kubernetes community Slack](http://slack.k8s.io/) to ask questions or share your feedback.
